feat: Delete Feature Flags of Productized Features - MEED-1594 - Meeds-io/meeds#588 (#840)